# SplitCommit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  splitcommit.sln  splitcommit.vcxproj
cmake/: libOTe.cmake
matrices/: 40-rep-code.txt  CMakeLists.txt  bch-128x134.txt
matrices/build_matrix/: c2'+c3'.txt  c2'.txt  c2.txt  c3'.txt  c3.txt  final_matrix.txt  modify-matrix.cpp  sage-gen-bch-128x134.txt
src/: CMakeLists.txt
src/mains/: main-split-commit-rec.cpp  main-split-commit-rec.vcxproj  main-split-commit-snd.cpp  main-split-commit-snd.vcxproj  mains.h
src/mains/tutorials/: tutorials.cpp  tutorials.vcxproj
src/mains/x64/Debug/main-split-commit-rec/main-spl.91CF4509.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  main-split-commit-rec.lastbuildstate
src/mains/x64/Debug/main-split-commit-snd/main-spl.27C8D35A.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/split-commit/: split-commit-rec.cpp  split-commit-rec.h  split-commit-snd.cpp  split-commit-snd.h  split-commit.cpp  split-commit.h
src/util/: byte-array-vec.cpp  byte-array-vec.h  global-constants.h  util.h
test/: CMakeLists.txt  main-split-commit-rec.vcxproj  main-split-commit-snd.cpp  main-split-commit-snd.vcxproj  profiler.cpp  profiler.vcxproj  test-split-commit.cpp  test-split-commit.vcxproj  test.h
